/*
 * xsync: build.gradle
 * XNAT http://www.xnat.org
 * Copyright (c) 2017, Washington University School of Medicine
 * All Rights Reserved
 *
 * Released under the Simplified BSD.
 */

buildscript {
    ext {
        vXnat = '1.10.0-RC-SNAPSHOT'
    }
    repositories {
        mavenLocal()
        maven { url "https://plugins.gradle.org/m2" }
        mavenCentral()
        maven { url "https://nrgxnat.jfrog.io/nrgxnat/libs-release" }
        maven { url "https://nrgxnat.jfrog.io/nrgxnat/libs-snapshot" }
    }
    dependencies {
        classpath "com.palantir.gradle.gitversion:gradle-git-version:0.12.1"
        classpath "gradle.plugin.com.dorongold.plugins:task-tree:1.5"
        classpath "io.franzbecker:gradle-lombok:4.0.0"
        classpath "io.spring.gradle:dependency-management-plugin:1.0.11.RELEASE"
        classpath "org.nrg.xnat.build:xnat-data-builder:${vXnat}"
        classpath "net.linguica.gradle:maven-settings-plugin:0.5"         
    }
}

apply plugin: 'io.spring.dependency-management'
apply plugin: 'groovy'
apply plugin: 'java'
apply plugin: 'maven-publish'
apply plugin: 'idea'
apply plugin: 'eclipse'
apply plugin: "org.nrg.xnat.build.xnat-data-builder"
apply plugin: 'io.franzbecker.gradle-lombok'
apply plugin: 'net.linguica.maven-settings'

group 'org.nrg.xsync'
version '1.8.1-java21-RC-SNAPSHOT'
description "XNAT XSync Plugin"


repositories {
    mavenLocal()
    maven { url "https://nrgxnat.jfrog.io/nrgxnat/libs-release" }
    maven { url "https://nrgxnat.jfrog.io/nrgxnat/libs-snapshot" }
    mavenCentral()
}

// Use this configuration to put dependencies into the fat jar
configurations {
    implementation.extendsFrom(implementAndInclude)
}

sourceCompatibility = 21
targetCompatibility = 21

dependencyManagement.imports {
    mavenBom "org.nrg:parent:${vXnat}"
}

dependencies {
    implementation("org.nrg.xnat:web") {
        transitive = false
    }
    implementation("org.nrg.xnat:xnat-data-models") {
        transitive = false
    }

    implementation("org.nrg.xdat:core") {
        transitive = false
    }
    annotationProcessor("org.nrg:framework")
    compileOnly("org.nrg:framework")
    implementation("org.nrg:config") {
        transitive = false
    }
    implementation("org.nrg:transaction") {
        transitive = false
    }
    implementation("org.nrg:mail") {
        transitive = false
    }
    implementation("org.nrg:prefs") { transitive = false }
    implementation("org.nrg.dicom:mizer") { transitive = false }
    implementation("org.nrg:dicomtools") { transitive = false }

    implementation("javax.servlet:javax.servlet-api") { transitive = false }

    implementation("turbine:turbine") {
        transitive = false
    }
    implementation("org.apache.velocity:velocity") {
        transitive = false
    }

    implementation("org.restlet:org.restlet") { transitive = false }
    implementation("dcm4che:dcm4che-core") { transitive = false }
    implementation("javax.mail:javax.mail-api") { transitive = false }
    implementation("com.google.code.gson:gson") { transitive = false }

    implementation("eu.bitwalker:UserAgentUtils") { transitive = false }

    implementAndInclude('com.opencsv:opencsv:5.9')

    implementation "commons-beanutils:commons-beanutils"
    implementation "commons-codec:commons-codec"
    implementation "commons-collections:commons-collections"
    implementation "commons-configuration:commons-configuration"
    implementation "commons-digester:commons-digester"
    implementation "commons-discovery:commons-discovery"
    implementation "commons-fileupload:commons-fileupload"
    implementation "commons-net:commons-net"

    implementation "org.apache.commons:commons-configuration2"
    implementation "org.apache.commons:commons-math"
    implementation "org.apache.commons:commons-text"

    implementation "org.apache.httpcomponents:httpclient"
    implementation 'org.apache.httpcomponents:httpmime'


    implementation "org.hibernate:hibernate-core"

    implementation "org.springframework:spring-webmvc"

    implementation "com.fasterxml.jackson.core:jackson-annotations"
    implementation "com.fasterxml.jackson.core:jackson-core"
    implementation "com.fasterxml.jackson.core:jackson-databind"

    implementation "io.springfox:springfox-swagger2"
    implementation "io.springfox:springfox-swagger-ui"

    implementation "org.slf4j:slf4j-api"
    implementation "org.slf4j:log4j-over-slf4j"

    implementation "ecs:ecs"

    implementation "com.google.code.findbugs:jsr305"
    implementation "org.kohsuke.metainf-services:metainf-services"
}

lombok {
    version = dependencyManagement.importedProperties["lombok.version"] as String
    sha256 = dependencyManagement.importedProperties["lombok.checksum"] as String
}

configurations {
    all*.exclude group: 'com.sun.media', module: 'jai_imageio'
    all*.exclude group: 'javax.sql', module: 'jdbc-stdext'
    all*.exclude group: 'javax.transaction', module: 'jta'
}

sourceSets {
    main {
        java {
            srcDir 'src/main/java'
            srcDir 'build/xnat-generated/src/main/java'
        }
        resources {
            srcDir 'src/main/resources'
            srcDir 'build/xnat-generated/src/main/resources'
        }
    }
}

task fatJar(type: Jar) {
    zip64 true
    archiveBaseName = project.name + '-all'
    setDuplicatesStrategy(org.gradle.api.file.DuplicatesStrategy.EXCLUDE)
    from {
        configurations.implementAndInclude.collect { it.isDirectory() ? it : zipTree(it) }
    } {
        exclude "META-INF/*.SF"
        exclude "META-INF/*.DSA"
        exclude "META-INF/*.RSA"
    }
    with jar
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact fatJar
            versionMapping {
                usage('java-api') {
                    fromResolutionOf('runtimeClasspath')
                }
                usage('java-runtime') {
                    fromResolutionResult()
                }
            }
        }
    }
    repositories{ 
        maven {
            url "https://nrgxnat.jfrog.io/nrgxnat/libs-${project.version.endsWith("-SNAPSHOT") ? "snapshot" : "release"}"
            // The value for name must match <id> in ~/.m2/settings.xml
            name = "XNAT_Artifactory"        
        }
    }
}
